# PDF_Quick_Responserer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/database/: db.py  models.py
static/: index.html
